--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <form action="none">
             <div id="quiz" class="quiz"></div>
             <div id="result" class="result"></div>
-            <div id="help">You have 2 minutes to complete this test, click the button once you're ready.</div>
+            <div id="help">This is a coding/programming based test, you have 2 minutes to complete this test, click the
+                button once you're ready.</div>
             <div class="btn-container">
                 <button type="button" id="retryBtn" class="btn">Retry</button>
                 <button type="button" id="showAnsBtn" class="btn">Show Answer(s)</button>
